@@ -192,7 +192,7 @@ SLPError ProcessAttrRqst(PSLPHandleInfo handle)
     return result;
 }
 
-
+#ifdef ENABLE_ASYNC_API
 /*-------------------------------------------------------------------------*/ 
 SLPError AsyncProcessAttrRqst(PSLPHandleInfo handle)
 /*-------------------------------------------------------------------------*/
@@ -204,6 +204,7 @@ SLPError AsyncProcessAttrRqst(PSLPHandleInfo handle)
     handle->inUse = SLP_FALSE;
     return result;
 }
+#endif
 
 
 /*=========================================================================*/
@@ -316,6 +317,7 @@ SLPError SLPFindAttrs(SLPHandle   hSLP,
     /*----------------------------------------------*/
     /* Check to see if we should be async or sync   */
     /*----------------------------------------------*/
+#ifdef ENABLE_ASYNC_API
     if(handle->isAsync)
     {
         /* COPY all the referenced parameters */
@@ -344,6 +346,7 @@ SLPError SLPFindAttrs(SLPHandle   hSLP,
         }
     }
     else
+#endif /* ifdef ENABLE_ASYNC_API */
     {
         /* Leave all parameters REFERENCED */
 
